--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,17 +6,38 @@
     {
       "src": "favicon.ico",
       "sizes": "48x48",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "purpose": "maskable any"
     },
     {
-      "src": "logo192.png",
+      "src": "icon-48x48.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "48x48",
+      "purpose": "maskable any"
     },
     {
-      "src": "logo512.png",
+      "src": "icon-144x144.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "144x144",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icon-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icon-384x384.png",
+      "type": "image/png",
+      "sizes": "384x384",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "maskable any"
     }
   ],
   "start_url": ".",
