--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,43 +1,41 @@
 {
   "short_name": "Typing Master",
   "name": "Typing Master",
-  "description": "Increase your typing speed with typing master, it includes word and sentence modes.",
+  "description": "Increase your typing speed with typing master, you can choose between word and sentence modes.",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "48x48",
       "type": "image/x-icon",
-      "purpose": "maskable any"
+      "purpose": "maskable"
     },
     {
       "src": "icon-48x48.png",
       "type": "image/png",
-      "sizes": "48x48",
-      "purpose": "maskable any"
+      "sizes": "48x48"
     },
     {
       "src": "icon-144x144.png",
       "type": "image/png",
-      "sizes": "144x144",
-      "purpose": "maskable any"
+      "sizes": "144x144"
     },
     {
       "src": "icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "maskable any"
+      "purpose": "maskable"
     },
     {
-      "src": "icon-384x384.png",
+      "src": "icon-284x284.png",
       "type": "image/png",
-      "sizes": "384x384",
-      "purpose": "maskable any"
+      "sizes": "284x284",
+      "purpose": "maskable"
     },
     {
       "src": "icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "maskable any"
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
