--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,7 +22,7 @@
     {
       "src": "icon-192x192.png",
       "type": "image/png",
-      "sizes": "192x192",
+      "sizes": "192x192"
     },
     {
       "src": "icon-284x284.png",
