--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,16 @@
       "sizes": "48x48"
     },
     {
+      "src": "icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
       "src": "icon-144x144.png",
       "type": "image/png",
       "sizes": "144x144"
